@@ -37,6 +37,7 @@ Changes for 1.4.j:
 
 Changes for 1.4.5:
 
+ - [ZBX-343] fixed possible hang of server trapper process (Alexei)
  - [ZBX-341] fixed compilation problem under Tru64/OSF (Alexei)
  - [ZBX-322] fixed possible incorrect autodiscovery (Sasha)
  - [ZBX-315] fixed server irregulary stop on OpenBSD (Sasha)
